--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,6 @@ tests/test_merge_dt_test.py
 tests/test_specialization_of_function.py
 tests/test_specialization_of_function.py
 tests/test_broken_functions.py
+test.py
+*.sh
+offline.py
